--- a/src/index.css
+++ b/src/index.css
@@ -17,7 +17,36 @@
     /* border: 1px solid fuchsia; */
 }
 
+.big-input-container textarea {
+    color: #aaa;
+    font-weight: 600;
+    height: 100%;
+    width: 100%;
+    border: 1px solid;
+    border-radius: 5px;
+    font-size: 1rem;
+    transition: 0.5s;
+    font-size: 1rem;
+    padding: 0px 10px;
+    background-color: #1d2b3a;
+    border: 1px solid #ffffff40;
+}
+
 .input-container input {
+    outline: none;
+    height: 100%;
+    width: 100%;
+    border: 1px solid #ffffff40;
+    border-radius: 5px;
+    font-size: 1rem;
+    transition: 0.5s;
+    font-size: 1rem;
+    padding: 0px 10px;
+    background-color: #1d2b3a;
+    color: whitesmoke;
+}
+
+.dateField {
     outline: none;
     height: 100%;
     width: 100%;
@@ -56,8 +85,8 @@
     color: #ffffff40;
 }
 
-.input-container textarea:valid~.label,
-.input-container textarea:focus~.label {
+.big-input-container textarea:valid~.label,
+.big-input-container textarea:focus~.label {
     color: #00dfc4;
     transform: translateX(20px) translateY(-27px);
     transition: 400ms;
@@ -82,4 +111,49 @@
     border-right: 1px solid #00dfc4;
     letter-spacing: 0.2rem;
     font-weight: 400;
+}
+
+
+
+.date-picker-container {
+    position: relative;
+    /* width: 200px;
+    margin: 20px; */
+    border: 1px solid #1d2b3a;
+    border-radius: 5px;
+}
+
+.date-picker-label {
+    position: absolute;
+    top: 50%;
+    left: 10px;
+    transform: translateY(-50%);
+    transition: all 0.5s ease;
+    pointer-events: none;
+    color: #aaa;
+    text-transform: uppercase;
+}
+
+.date-picker-input {
+    width: 100%;
+    padding: 10px;
+    box-sizing: border-box;
+    background-color: #1d2b3a;
+    color: #aaa;
+    font-weight: 600;
+}
+
+
+
+.date-picker-input:focus+.date-picker-label,
+.date-picker-label-active {
+    color: #00dfc4;
+    padding: 0px 10px;
+    top: 0;
+    transform: translateY(-70%);
+    background-color: #1d2b3a;
+    font-size: 0.75rem;
+    border-left: 1px solid #00dfc4;
+    border-right: 1px solid #00dfc4;
+    letter-spacing: 0.2rem;
 }
