status update functionality improved

--- a/src/index.css
+++ b/src/index.css
@@ -29,7 +29,7 @@
     font-size: 1rem;
     padding: 0px 10px;
     background-color: #1d2b3a;
-    border: 1px solid #ffffff40;
+    border: 1px solid #aaa;
 }
 
 .input-container input {
