--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,15 @@
 @tailwind utilities;
 
 
+.page-wrapper{
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-items: center;
+    place-items: center;
+    padding: 2rem;
+}
+
 .input-container {
     /* position: relative; */
     height: 50px;
