--- a/src/Pages/HomePage/WhatUsersSay/whatUsersSay.css
+++ b/src/Pages/HomePage/WhatUsersSay/whatUsersSay.css
@@ -5,7 +5,7 @@
     position: relative;
   } */
   
-  .testimonial-slide {
+  /* .testimonial-slide {
     opacity: 0;
     transition: opacity 0.5s ease-in-out;
     animation: fadeIn 0.5s forwards;
@@ -15,19 +15,19 @@
     to {
       opacity: 1;
     }
-  }
+  } */
   
-  img {
+  /* img {
     width: 100px;
     height: 100px;
     border-radius: 50%;
     margin-bottom: 10px;
-  }
+  } */
   
-  .testimonial-text {
+  /* .testimonial-text {
     font-size: 1rem;
     margin: 10px 0;
-  }
+  } */
   
   /* .controls {
     display: flex;
@@ -49,8 +49,8 @@
     transition: background-color 0.3s;
   } */
   
-  .prev-button:hover,
+  /* .prev-button:hover,
   .next-button:hover {
     background-color: #145a8d;
-  }
+  } */
   
